adjust oversluiten tool index, adjust readme.md

--- a/pages/cbhs/oversluiten/index.html
+++ b/pages/cbhs/oversluiten/index.html
@@ -1,10 +1,16 @@
+<!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>
       Oversluiten tool
     </title>
   </head>
   <body>
+    <link rel="stylesheet" href="https://www.cbhs.io/apps/v2/css/oversluiten.css">
+
+    <div id="frits_oversluitenTool" class="tool-builder"></div>
+
     <script src="https://www.cbhs.io/apps/v2/vendor.js"></script>
     <script src="https://www.cbhs.io/apps/v2/oversluiten.js"></script>
   </body>
