Update app source to the iframe build

--- a/pages/cbhs/oversluiten/index.html
+++ b/pages/cbhs/oversluiten/index.html
@@ -12,6 +12,6 @@
     <div id="frits_oversluitenTool" class="tool-builder"></div>
 
     <script src="https://www.cbhs.io/apps/v2/vendor.js"></script>
-    <script src="https://www.cbhs.io/apps/v2/oversluiten.js"></script>
+    <script src="https://www.cbhs.io/apps/v2/iframe_oversluiten.js"></script>
   </body>
 </html>
