--- a/pages/cbhs/oversluiten/index.html
+++ b/pages/cbhs/oversluiten/index.html
@@ -7,11 +7,7 @@
     </title>
   </head>
   <body>
-    <link rel="stylesheet" href="https://www.cbhs.io/apps/v2/css/oversluiten.css">
-
-    <div id="frits_oversluitenTool" class="tool-builder"></div>
-
-    <script src="https://www.cbhs.io/apps/v2/vendor.js"></script>
+    <div id="frits_oversluitenTool"></div>
     <script src="https://www.cbhs.io/apps/v2/iframe_oversluiten.js"></script>
   </body>
 </html>
