--- a/pages/cbhs/oversluiten/index.html
+++ b/pages/cbhs/oversluiten/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="frits_oversluitenTool"></div>
+    <script src="https://cbhs-website-fe-57.cbhs.io/apps/v2/vendor.js"></script>
     <script src="https://cbhs-website-fe-57.cbhs.io/apps/v2/iframe_oversluiten.js"></script>
   </body>
 </html>
