localhost domain override

--- a/pages/cbhs/oversluiten/local.html
+++ b/pages/cbhs/oversluiten/local.html
@@ -3,13 +3,15 @@
   <head>
     <meta charset="utf-8" />
     <title>
-      Oversluiten tool, website Stijn
+      Oversluiten tool, domain override localhost
     </title>
   </head>
   <body>
     <div id="frits_oversluitenTool"></div>
     <script>
-      window.fritsDomainOverride = 'https://website-stijn.frits.io';
+      window.fritsAppOptions = {
+        domainOverride: 'https://localhost:3901',
+      };
     </script>
     <script src="https://website-stijn.frits.io/apps/v2/vendor.js"></script>
     <script src="https://website-stijn.frits.io/apps/v2/iframe_oversluiten.js"></script>
