Create helper to initialize scripts

--- a/pages/cbhs/afspraak_maken/index.html
+++ b/pages/cbhs/afspraak_maken/index.html
@@ -7,11 +7,7 @@
     </title>
   </head>
   <body>
-    <link rel="stylesheet" href="https://www.cbhs.io/apps/v2/css/appointment_app.css">
-
-    <div id="toolAppointmentApp" class="tool-builder"></div>
-
-    <script src="https://www.cbhs.io/apps/v2/vendor.js"></script>
-    <script src="https://www.cbhs.io/apps/v2/appointment_app.js"></script>
+    <div id="toolAppointmentApp"></div>
+    <script src="/scripts/helper.js?app=iframe_appointment_app"></script>
   </body>
 </html>
