--- a/pages/cbhs/afspraak_maken/local.html
+++ b/pages/cbhs/afspraak_maken/local.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frits Appointment App</title>
-</head>
-<body>
-  <h1>Hello World!</h1>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>
+      Afspraak maken tool
+    </title>
+  </head>
+  <body>
+    <div id="toolAppointmentApp"></div>
+    <script src="/scripts/helper.js?app=iframe_appointment_app&local=true"></script>
+  </body>
 </html>
