--- a/pages/cbhs/maximale_hypotheek/local.html
+++ b/pages/cbhs/maximale_hypotheek/local.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="toolFinalMaxMortgage"></div>
-    <script src="/scripts/helper.js?app=iframe_tool_final_max_mortgage"></script>
+    <script src="/scripts/helper.js?app=iframe_tool_final_max_mortgage&local=true"></script>
   </body>
 </html>
