--- a/pages/cbhs/oversluiten/local.html
+++ b/pages/cbhs/oversluiten/local.html
@@ -8,12 +8,6 @@
   </head>
   <body>
     <div id="frits_oversluitenTool"></div>
-    <script>
-      window.fritsAppOptions = {
-        domainOverride: 'https://localhost:3901',
-      };
-    </script>
-    <script src="https://website-stijn.frits.io/apps/v2/vendor.js"></script>
-    <script src="https://website-stijn.frits.io/apps/v2/iframe_oversluiten.js"></script>
+    <script src="/scripts/helper.js?app=iframe_oversluiten&local=true"></script>
   </body>
 </html>
