--- a/pages/cbhs/rentevergelijker/local.html
+++ b/pages/cbhs/rentevergelijker/local.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="frits_interestCompareTool"></div>
-    <script src="/scripts/helper.js?app=iframe_interest_compare"></script>
+    <script src="/scripts/helper.js?app=iframe_interest_compare&local=true"></script>
   </body>
 </html>
