--- a/pages/cbhs/maandlasten/local.html
+++ b/pages/cbhs/maandlasten/local.html
@@ -8,6 +8,6 @@
   </head>
   <body>
     <div id="frits_maandlastenTool"></div>
-    <script src="/scripts/helper.js?app=iframe_maandlasten"></script>
+    <script src="/scripts/helper.js?app=iframe_maandlasten&local=true"></script>
   </body>
 </html>
