--- a/pages/cbhs/oversluiten/index.html
+++ b/pages/cbhs/oversluiten/index.html
@@ -8,8 +8,6 @@
   </head>
   <body>
     <div id="frits_oversluitenTool"></div>
-    <script src="https://cbhs-website-fe-57.cbhs.io/apps/v2/runtime.js"></script>
-    <script src="https://cbhs-website-fe-57.cbhs.io/apps/v2/vendor.js"></script>
-    <script src="https://cbhs-website-fe-57.cbhs.io/apps/v2/iframe_oversluiten.js"></script>
+    <script src="/scripts/helper.js?app=iframe_oversluiten"></script>
   </body>
 </html>
