change cbhs tools name, without iframe_

--- a/pages/cbhs/afspraak-maken/index.html
+++ b/pages/cbhs/afspraak-maken/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="toolAppointmentApp"></div>
-    <script src="/scripts/helper.js?app=iframe_appointment_app"></script>
+    <script src="/scripts/helper.js?app=appointment_app"></script>
   </body>
 </html>
