--- a/pages/cbhs/oversluiten/local.html
+++ b/pages/cbhs/oversluiten/local.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="frits_oversluitenTool"></div>
-    <script src="/scripts/helper.js?app=iframe_oversluiten&local=true"></script>
+    <script src="/scripts/helper.js?app=oversluiten&local=true"></script>
   </body>
 </html>
