--- a/pages/cbhs/maandlasten/index.html
+++ b/pages/cbhs/maandlasten/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="frits_maandlastenTool"></div>
-    <script src="/scripts/helper.js?app=iframe_maandlasten"></script>
+    <script src="/scripts/helper.js?app=maandlasten"></script>
   </body>
 </html>
