--- a/pages/cbhs/rentemiddelen/index.html
+++ b/pages/cbhs/rentemiddelen/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="frits_rentemiddelenTool"></div>
-    <script src="/scripts/helper.js?app=iframe_rentemiddelen"></script>
+    <script src="/scripts/helper.js?app=rentemiddelen"></script>
   </body>
 </html>
