--- a/pages/cbhs/rentevergelijker/index.html
+++ b/pages/cbhs/rentevergelijker/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <div id="frits_interestCompareTool"></div>
-    <script src="/scripts/helper.js?app=iframe_interest_compare"></script>
+    <script src="/scripts/helper.js?app=interest_compare"></script>
   </body>
 </html>
