update iframe page

--- a/pages/accelerate/index.html
+++ b/pages/accelerate/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-  Accelerate
-
-  <iframe src="https://www.ikbenfrits.nl/admin/backoffice/external-resources/?date=2022-03-04%252011%253A39%253A38%2520CET&dossier_id=DS3AABD2E21295B9E868AB22EDA830D1&external_id=1073304&email=joost%2540ikbenfrits.nl&hash=068827a96032f6c99a39cf1dc68ffecc29d9f7a8"></iframe>
+  <iframe 
+    src="https://www.ikbenfrits.nl/admin/backoffice/external-resources/?date=2022-03-04%252011%253A39%253A38%2520CET&dossier_id=DS3AABD2E21295B9E868AB22EDA830D1&external_id=1073304&email=joost%2540ikbenfrits.nl&hash=068827a96032f6c99a39cf1dc68ffecc29d9f7a8"
+    style="width: 100%;min-height:100vh;">
+  </iframe>
 
 </body>
 </html>
