--- a/pages/frits/maximale-hypotheek-inline/index.html
+++ b/pages/frits/maximale-hypotheek-inline/index.html
@@ -4,7 +4,7 @@
   </head>
   <body>
     <h1>Maximale hypotheek berekenen</h1>
-    <div id="tool-max-mortgage-inline"></div>
+    <div id="tool-max-mortgage"></div>
     <script>
       // Set UTM parameters
       var fritsAppOptions = {
@@ -15,6 +15,6 @@
       };
     </script>
     <script src="https://app.ikbenfrits.nl/apps/v2/vendor.js"></script>
-    <script src="https://app.ikbenfrits.nl/apps/v2/tool_max_mortgage_inline.js"></script>
+    <script src="https://app.ikbenfrits.nl/apps/v2/tool_max_mortgage.js"></script>
   </body>
 </html>
