Full url iframeDomain

--- a/pages/frits/maximale-hypotheek-inline/index.html
+++ b/pages/frits/maximale-hypotheek-inline/index.html
@@ -12,7 +12,7 @@
           source: 'amvest',
           campaign: 'glashaven',
         },
-        iframeDomain: 'app.ikbenfrits.nl',
+        iframeDomain: 'https://app.ikbenfrits.nl',
       };
     </script>
     <script src="https://app.ikbenfrits.nl/apps/v2/vendor.js"></script>
