Serve inline tool locally

--- a/pages/frits/maximale-hypotheek-inline/index.html
+++ b/pages/frits/maximale-hypotheek-inline/index.html
@@ -12,10 +12,10 @@
           source: 'amvest',
           campaign: 'glashaven',
         },
-        iframeDomain: 'https://app.ikbenfrits.nl',
+        iframeDomain: 'https://localhost:3901',
       };
     </script>
-    <script src="https://app.ikbenfrits.nl/apps/v2/vendor.js"></script>
-    <script src="https://app.ikbenfrits.nl/apps/v2/tool_max_mortgage_inline.js"></script>
+    <script src="https://localhost:3801/apps/v2/vendor.js"></script>
+    <script src="https://localhost:3801/apps/v2/tool_max_mortgage_inline.js"></script>
   </body>
 </html>
